Sat Mar 06 02:32:58 GMT 2004  Olly Betts <olly@survex.com>

	* docs/: Updated the quickstart tutorial and removed the warning
	  that "this document isn't up to date".

Sat Mar 06 01:56:17 GMT 2004  Olly Betts <olly@survex.com>

	* api/omenquire.cc: Another tweak for Sun's C++ compiler.

Sat Mar 06 01:31:29 GMT 2004  Olly Betts <olly@survex.com>

	* common/omenquireinternal.h: Tweaked friend class declarations a
	  bit so Sun's C++ compiler can cope.

Thu Mar 04 23:58:17 GMT 2004  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated with results from the tinderbox.

Thu Mar 04 23:29:28 GMT 2004  Olly Betts <olly@survex.com>

	* tests/btreetest.cc,tests/quartztest.cc: NetBSD mkdir() doesn't cope
	  with a trailing / on the path - fixed our code to cope with this.

Wed Mar 03 19:14:09 GMT 2004  Olly Betts <olly@survex.com>

	* docs/todo.xml: Updated.

Fri Feb 13 23:56:44 GMT 2004  Olly Betts <olly@survex.com>

	* api/omquery.cc,tests/api_nodb.cc: Throw error when an empty query is
	  used to build in the binary operator Query ctor.  Added regression
	  test.

Fri Feb 13 15:08:09 GMT 2004  Olly Betts <olly@survex.com>

	* HACKING: XAPIAN_DEBUG_TYPES should be XAPIAN_DEBUG_FLAGS.

Sat Feb 07 14:26:54 GMT 2004  Olly Betts <olly@survex.com>

	* docs/queryparser.html: Grammar fixes.

Fri Jan 16 02:06:53 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Fixed bug flagged up by deldoc4.

Thu Jan 15 01:00:48 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_termlist.cc: Use Xapian::doccount instead of
	  unsigned int in set_entries().

Thu Jan 15 00:56:47 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h,
	  testsuite/btreecheck.cc: Made some static functions into static
	  member functions of Btree so we can avoid duplicating code in
	  btreecheck.cc.  Also tweaked compare_keys to use memcmp and
	  special case when the keys are the same length (each of these