@@ -3,7 +3,7 @@
  * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2003 Olly Betts
+ * Copyright 2003,2004 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -123,13 +123,13 @@ Document::add_posting(const string & tname,
 }
 
 void
-Document::add_term_nopos(const string & tname, Xapian::termcount wdfinc)
+Document::add_term(const string & tname, Xapian::termcount wdfinc)
 {
-    DEBUGAPICALL(void, "Document::add_term_nopos", tname << ", " << wdfinc);
+    DEBUGAPICALL(void, "Document::add_term", tname << ", " << wdfinc);
     if (tname.empty()) {
 	throw InvalidArgumentError("Empty termnames aren't allowed.");
     }
-    internal->add_term_nopos(tname, wdfinc);
+    internal->add_term(tname, wdfinc);
 }
 
 void
@@ -351,7 +351,7 @@ Xapian::Document::Internal::add_posting(const string & tname, Xapian::termpos tp
 }
 
 void
-Xapian::Document::Internal::add_term_nopos(const string & tname, Xapian::termcount wdfinc)
+Xapian::Document::Internal::add_term(const string & tname, Xapian::termcount wdfinc)
 {
     need_terms();
 
