@@ -4,7 +4,7 @@
 /* ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2002,2003 Olly Betts
+ * Copyright 2002,2003,2004 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -118,8 +118,15 @@ class Document {
 	 *  @param wdfinc    The increment that will be applied to the wdf
 	 *                   for this term.
 	 */
-	void add_term_nopos(const std::string & tname,
-			    Xapian::termcount wdfinc = 1);
+	void add_term(const std::string & tname, Xapian::termcount wdfinc = 1);
+
+	/** Old name for add_term.
+	 *
+	 * Use add_term() instead.
+	 */
+	void add_term_nopos(const string & term, Xapian::termcount wdfinc = 1) {
+	    add_term(term, wdfinc);
+	}
 
 	/** Remove a posting of a term from the document.
 	 *
