@@ -3,7 +3,7 @@
  * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2002,2003 Olly Betts
+ * Copyright 2002,2003,2004 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -548,7 +548,7 @@ static bool test_poslist2()
     Xapian::WritableDatabase db = get_writable_database("");
 
     Xapian::Document doc;
-    doc.add_term_nopos("nopos");
+    doc.add_term("nopos");
     Xapian::docid did = db.add_document(doc);
 
     TEST_EXCEPTION(Xapian::RangeError,
