@@ -1,3 +1,11 @@
+Tue Mar 09 19:04:48 GMT 2004  Olly Betts <olly@survex.com>
+
+	* api/omdocument.cc,common/document.h,include/xapian/document.h,
+	  tests/api_db.cc,tests/api_posdb.cc: Renamed
+	  Xapian::Document::add_term_nopos to Xapian::Document::add_term
+	  (with forwarding wrapper method for compatibility with existing
+	  code).
+
 Sat Mar 06 02:32:58 GMT 2004  Olly Betts <olly@survex.com>
 
 	* docs/: Updated the quickstart tutorial and removed the warning
